refactor: Continuing changes to assertJ. Refactored some classes instantiating the test builder classes, static'd some methods to keep to the stateless functionality/goal of the test builders. Refactored a couple of tests to avoid duplication and improve readability. chore: updated GSON and spring boot versions while was there.