@@ -28,16 +28,10 @@ import org.springframework.messaging.MessageHeaders;
 import com.google.gson.Gson;
 
 @SpringBootTest(classes = {MAATCourtDataApplication.class})
-public class UnlinkListenerTest extends MockMvcIntegrationTest {
+class UnlinkListenerTest extends MockMvcIntegrationTest {
 
     @Autowired
     private Gson gson;
-
-    @Autowired
-    private TestModelDataBuilder testModelDataBuilder;
-
-    @Autowired
-    private TestEntityDataBuilder testEntityDataBuilder;
 
     @Autowired
     private CourtDataAdapterClient courtDataAdapterClient;
@@ -49,19 +43,19 @@ public class UnlinkListenerTest extends MockMvcIntegrationTest {
     private QueueMessageLogTestHelper queueMessageLogTestHelper;
 
     @Test
-    public void givenUnlinkLinkJSONMessage_whenUnlinkListenerIsInvoked_thenCaseIsUnlinked() {
+    void givenUnlinkLinkJSONMessage_whenUnlinkListenerIsInvoked_thenCaseIsUnlinked() {
 
         // given
 
         RepOrderEntity repOrderEntity = repos.repOrder.save(TestEntityDataBuilder.getPopulatedRepOrder());
 
-        Unlink unlink = gson.fromJson(testModelDataBuilder.getUnLinkString(repOrderEntity.getId()), Unlink.class);
+        Unlink unlink = gson.fromJson(TestModelDataBuilder.getUnLinkString(repOrderEntity.getId()), Unlink.class);
         UnlinkModel unlinkModel = UnlinkModel.builder().unlink(unlink).build();
         WqLinkRegisterEntity wqLinkRegisterEntity =
-                testEntityDataBuilder.getWqLinkRegisterEntity(repOrderEntity.getId());
+                TestEntityDataBuilder.getWqLinkRegisterEntity(repOrderEntity.getId());
         unlinkModel.setWqLinkRegisterEntity(wqLinkRegisterEntity);
         RepOrderCPDataEntity repOrderCPDataEntity =
-                testEntityDataBuilder.getRepOrderCPDataEntity(repOrderEntity.getId());
+                TestEntityDataBuilder.getRepOrderCPDataEntity(repOrderEntity.getId());
         unlinkModel.setRepOrderCPDataEntity(repOrderCPDataEntity);
         repos.wqLinkRegister.save(wqLinkRegisterEntity);
         repos.repOrderCPData.save(RepOrderCPDataEntity.builder()
@@ -73,13 +67,13 @@ public class UnlinkListenerTest extends MockMvcIntegrationTest {
         Map<String, Object> header = new HashMap<>();
         header.put("MessageId", "AIDAIU3GACVJITZULQ2RQ");
         MessageHeaders headers = new MessageHeaders(header);
-        unlinkListener.receive(testModelDataBuilder.getUnLinkString(repOrderEntity.getId()), headers);
+        unlinkListener.receive(TestModelDataBuilder.getUnLinkString(repOrderEntity.getId()), headers);
 
         // then
         assertWQLinkRegister(unlinkModel, repOrderEntity.getId());
 
         queueMessageLogTestHelper.assertQueueMessageLogged(
-                testModelDataBuilder.getUnLinkString(repOrderEntity.getId()),
+                TestModelDataBuilder.getUnLinkString(repOrderEntity.getId()),
                 1,
                 "e439dfc8-664e-4c8e-a999-d756dcf112c2",
                 repOrderEntity.getId());
@@ -88,7 +82,7 @@ public class UnlinkListenerTest extends MockMvcIntegrationTest {
     private void assertWQLinkRegister(UnlinkModel unlinkModel, Integer repId) {
 
         List<WqLinkRegisterEntity> wqUnLinkRegisterEntity = repos.wqLinkRegister.findAll();
-        WqLinkRegisterEntity unLinkRegister = wqUnLinkRegisterEntity.get(0);
+        WqLinkRegisterEntity unLinkRegister = wqUnLinkRegisterEntity.getFirst();
         assertNotNull(unLinkRegister);
         Unlink unlink = unlinkModel.getUnlink();
         assertThat(unLinkRegister.getMaatId()).isEqualTo(repId);
