@@ -3,7 +3,6 @@ package gov.uk.courtdata.laastatus.processor;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.mockito.Mockito.verify;
 
-import gov.uk.courtdata.builder.TestEntityDataBuilder;
 import gov.uk.courtdata.builder.TestModelDataBuilder;
 import gov.uk.courtdata.dto.CourtDataDTO;
 import gov.uk.courtdata.entity.OffenceEntity;
@@ -12,7 +11,6 @@ import gov.uk.courtdata.repository.OffenceRepository;
 
 import java.util.List;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
@@ -21,10 +19,8 @@ import org.mockito.InjectMocks;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import com.google.gson.Gson;
-
 @ExtendWith(MockitoExtension.class)
-public class UpdateOffenceInfoProcessorTest {
+class UpdateOffenceInfoProcessorTest {
 
     @InjectMocks
     private UpdateOffenceInfoProcessor offenceInfoProcessor;
@@ -32,34 +28,28 @@ public class UpdateOffenceInfoProcessorTest {
     @Spy
     private OffenceRepository offenceRepository;
 
-    private TestModelDataBuilder testModelDataBuilder;
-
     @Captor
-    private ArgumentCaptor<List<OffenceEntity>> OffenceCaptor;
-
-    @BeforeEach
-    public void setUp() {
-        testModelDataBuilder = new TestModelDataBuilder(new TestEntityDataBuilder(), new Gson());
-    }
+    private ArgumentCaptor<List<OffenceEntity>> offenceCaptor;
 
     @Test
-    public void givenOffenceDetails_whenProcessIsInvoked_thenOffenceRecordIsCreated() {
+    void givenOffenceDetails_whenProcessIsInvoked_thenOffenceRecordIsCreated() {
 
         // given
-        CourtDataDTO courtDataDTO = testModelDataBuilder.getCourtDataDTO();
+        CourtDataDTO courtDataDTO = TestModelDataBuilder.getCourtDataDTO();
         Offence offence =
-                courtDataDTO.getCaseDetails().getDefendant().getOffences().get(0);
+                courtDataDTO.getCaseDetails().getDefendant().getOffences().getFirst();
 
         // when
         offenceInfoProcessor.process(courtDataDTO);
 
         // then
-        verify(offenceRepository).saveAll(OffenceCaptor.capture());
-        assertThat(OffenceCaptor.getValue().get(0).getCaseId()).isEqualTo(courtDataDTO.getCaseId());
-        assertThat(OffenceCaptor.getValue().get(0).getTxId()).isEqualTo(courtDataDTO.getTxId());
-        assertThat(OffenceCaptor.getValue().get(0).getAsnSeq()).isEqualTo(offence.getAsnSeq());
-        assertThat(OffenceCaptor.getValue().get(0).getOffenceWording()).isEqualTo(offence.getOffenceWording());
-        assertThat(OffenceCaptor.getValue().get(0).getIojDecision()).isEqualTo(offence.getIojDecision());
-        assertThat(OffenceCaptor.getValue().get(0).getWqOffence()).isEqualTo(offence.getWqOffence());
+        verify(offenceRepository).saveAll(offenceCaptor.capture());
+        OffenceEntity entity = offenceCaptor.getValue().getFirst();
+        assertThat(entity.getCaseId()).isEqualTo(courtDataDTO.getCaseId());
+        assertThat(entity.getTxId()).isEqualTo(courtDataDTO.getTxId());
+        assertThat(entity.getAsnSeq()).isEqualTo(offence.getAsnSeq());
+        assertThat(entity.getOffenceWording()).isEqualTo(offence.getOffenceWording());
+        assertThat(entity.getIojDecision()).isEqualTo(offence.getIojDecision());
+        assertThat(entity.getWqOffence()).isEqualTo(offence.getWqOffence());
     }
 }
