@@ -6,7 +6,6 @@ import static org.mockito.ArgumentMatchers.anyCollection;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
-import gov.uk.courtdata.builder.TestEntityDataBuilder;
 import gov.uk.courtdata.builder.TestModelDataBuilder;
 import gov.uk.courtdata.dto.CourtDataDTO;
 import gov.uk.courtdata.entity.ResultEntity;
@@ -18,7 +17,6 @@ import gov.uk.courtdata.repository.ResultRepository;
 import java.util.ArrayList;
 import java.util.List;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
@@ -28,10 +26,8 @@ import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import com.google.gson.Gson;
-
 @ExtendWith(MockitoExtension.class)
-public class ResultsInfoProcessorTest {
+class ResultsInfoProcessorTest {
 
     @InjectMocks
     private ResultsInfoProcessor resultsInfoProcessor;
@@ -39,46 +35,41 @@ public class ResultsInfoProcessorTest {
     @Spy
     private ResultRepository resultRepository;
 
-    private TestModelDataBuilder testModelDataBuilder;
-
     @Captor
     private ArgumentCaptor<List<ResultEntity>> resultsCaptor;
 
     @Mock
     private ResultCodeRefDataProcessor resultCodeRefDataProcessor;
 
-    @BeforeEach
-    public void setUp() {
-        testModelDataBuilder = new TestModelDataBuilder(new TestEntityDataBuilder(), new Gson());
-    }
-
     @Test
-    public void givenResultsModel_whenProcessIsInvoked_thenResultRecordIsCreated() {
+    void givenResultsModel_whenProcessIsInvoked_thenResultRecordIsCreated() {
 
         // given
-        CourtDataDTO courtDataDTO = testModelDataBuilder.getCourtDataDTO();
+        CourtDataDTO courtDataDTO = TestModelDataBuilder.getCourtDataDTO();
         CaseDetails caseDetails = courtDataDTO.getCaseDetails();
         Result result =
-                caseDetails.getDefendant().getOffences().get(0).getResults().get(0);
+                caseDetails.getDefendant().getOffences().getFirst().getResults().getFirst();
 
         // when
         resultsInfoProcessor.process(courtDataDTO);
 
         // then
         verify(resultRepository).saveAll(resultsCaptor.capture());
-        assertThat(resultsCaptor.getValue().get(0).getResultCode()).isEqualTo(result.getResultCode());
-        assertThat(resultsCaptor.getValue().get(0).getCaseId()).isEqualTo(courtDataDTO.getCaseId());
-        assertThat(resultsCaptor.getValue().get(0).getResultShortTitle()).isEqualTo(result.getResultShortTitle());
-        assertThat(resultsCaptor.getValue().get(0).getWqResult()).isEqualTo(G_NO);
+        ResultEntity firstResult = resultsCaptor.getValue().getFirst();
+
+        assertThat(firstResult.getResultCode()).isEqualTo(result.getResultCode());
+        assertThat(firstResult.getCaseId()).isEqualTo(courtDataDTO.getCaseId());
+        assertThat(firstResult.getResultShortTitle()).isEqualTo(result.getResultShortTitle());
+        assertThat(firstResult.getWqResult()).isEqualTo(G_NO);
     }
 
     @Test
-    public void givenResultsModelIsNULL_whenProcessIsInvoked_thenResultRecordIsNOTCreated() {
+    void givenResultsModelIsNULL_whenProcessIsInvoked_thenResultRecordIsNOTCreated() {
 
         // given
-        CourtDataDTO courtDataDTO = testModelDataBuilder.getCourtDataDTO();
+        CourtDataDTO courtDataDTO = TestModelDataBuilder.getCourtDataDTO();
         CaseDetails caseDetails = courtDataDTO.getCaseDetails();
-        caseDetails.getDefendant().getOffences().get(0).setResults(null);
+        caseDetails.getDefendant().getOffences().getFirst().setResults(null);
         // when
         resultsInfoProcessor.process(courtDataDTO);
 
@@ -87,13 +78,13 @@ public class ResultsInfoProcessorTest {
     }
 
     @Test
-    public void givenResultsModelIsEmpty_whenProcessIsInvoked_thenResultRecordIsNOTCreated() {
+    void givenResultsModelIsEmpty_whenProcessIsInvoked_thenResultRecordIsNOTCreated() {
 
         // given
-        CourtDataDTO courtDataDTO = testModelDataBuilder.getCourtDataDTO();
+        CourtDataDTO courtDataDTO = TestModelDataBuilder.getCourtDataDTO();
         CaseDetails caseDetails = courtDataDTO.getCaseDetails();
         List<Result> resultList = new ArrayList<>();
-        caseDetails.getDefendant().getOffences().get(0).setResults(resultList);
+        caseDetails.getDefendant().getOffences().getFirst().setResults(resultList);
         // when
         resultsInfoProcessor.process(courtDataDTO);
 
